--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.9.1",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
+    "gsap": "^3.11.5",
     "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
