--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "gsap": "^3.11.5",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.2.45",
