--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.8.3",
+    "@vee-validate/rules": "^4.8.4",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
@@ -17,6 +19,7 @@
     "gsap": "^3.11.5",
     "lodash": "^4.17.21",
     "pinia": "^2.0.33",
+    "vee-validate": "^4.8.4",
     "vite-plugin-eslint": "^1.8.1",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
